# AstraTrace

./: .gitignore  CMakeLists.txt  LICENSE  PHASE1_COMPARISON.md  README.md  STRUCTURE_README.md  initial_changes.md  run.ps1  run.sh
include/astratrace/core/: color.hpp  image.hpp  ray.hpp
include/astratrace/render/: renderer.hpp
include/astratrace/scene/: camera.hpp  scene.hpp
scenes/: cornell-box-1.glb  cornell-box-2.glb
src/: PBR.hpp  camera.hpp  camera_controller.hpp  gltf_loader.cpp  gltf_loader.hpp  image.cpp  image.hpp  light.cpp  light.hpp  main.cpp  material.hpp  ray.hpp  scene.cpp  scene.hpp  shape.cpp  shape.hpp  utils.hpp
src/app/: application.cpp  application.hpp  frame_loop.cpp  frame_loop.hpp  main.cpp
src/app/input/: camera_controller.cpp  camera_controller.hpp
src/app/runtime/: fps_tracker.hpp  timer.hpp
src/core/: color.hpp  image.cpp  ray.hpp
src/io/gltf/: gltf_loader.cpp  gltf_loader.hpp  gltf_material_converter.cpp  gltf_material_converter.hpp  gltf_parser.cpp  gltf_parser.hpp  gltf_scene_builder.cpp  gltf_scene_builder.hpp  gltf_texture_cache.cpp  gltf_texture_cache.hpp
src/platform/sdl/: screenshot.hpp
src/render/: renderer.cpp  renderer.hpp
src/render/common/: brdf.hpp  normal_mapping.hpp  shadow_utils.cpp  shadow_utils.hpp
src/render/cpu/: alias_table.hpp  cpu_path_renderer.cpp  cpu_path_renderer.hpp  cpu_whitted_renderer.cpp  cpu_whitted_renderer.hpp  path_integrator.cpp  path_integrator.hpp  sampler.hpp  whitted_integrator.cpp  whitted_integrator.hpp
src/render/gpu/: gpu_path_renderer.cpp  gpu_path_renderer.hpp
src/scene/camera/: camera.hpp
src/scene/geometry/: geometry.hpp  obj_loader.cpp  obj_loader.hpp  shape_base.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp  triangle_mesh.cpp  triangle_mesh.hpp
src/scene/lights/: directional_light.cpp  directional_light.hpp  light_base.hpp  lights.hpp  point_light.cpp  point_light.hpp  spot_light.cpp  spot_light.hpp
src/scene/materials/: material_base.hpp  materials.hpp  pbr_material.hpp  smooth_glass_material.hpp  smooth_mirror_material.hpp
src/scene/world/: scene.cpp  scene.hpp  scene_object.cpp  scene_object.hpp  world.hpp
tools/: check_include_boundaries.py  path_phase2_sanity.cpp
